# fastbaps

./: .travis.yml  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  README.Rmd  README.md  configure  configure.ac
.github/workflows/: R-CMD-check.yaml  keepalive.yaml
R/: RcppExports.R  as.phylo.hclust.node.attributes.R  best_baps_partition.R  best_baps_partition_hclust.R  boot_fast_baps.R  calc_marginal_llk.R  fast_baps.R  find_max_cluster_subset.R  fix_clusters.R  get_hclust.R  import_fasta_sparse_nt.R  iorder.R  multi_level_best_baps_partition.R  multi_res_baps.R  new_baps.R  optimise_prior.R  root_mll.R  snp_dist.R  snp_similarity.R
inst/: CITATION  run_fastbaps
inst/extdata/: seqs.fa  seqs.fa.treefile
man/: as.phylo.hclust.node.attributes.Rd  best_baps_partition.Rd  boot_fast_baps.Rd  calc_marginal_llk.Rd  fast_baps.Rd  find_max_cluster_subset.Rd  fix_clusters.Rd  get_hclust.Rd  import_fasta_sparse_nt.Rd  iorder.Rd  multi_level_best_baps_partition.Rd  multi_res_baps.Rd  new_baps.Rd  optimise_prior.Rd  snp_dist.Rd  snp_similarity.Rd
src/: Makevars  Makevars.win  RcppExports.cpp  bhier.cpp  bhier_parallel.cpp  calc_ddk.cpp  import_fasta_to_vector_each_nt.cpp  kseq.h  log_add_sub.cpp  log_add_sub.hpp  part_llks.cpp  summarise_clusters.cpp  tree_llk.cpp
vignettes/: bibliography.bib  introduction.Rmd
